// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Astra Gas Tests Mixing Classic and CL with Universal Router. Batch reverts gas: 2 sub-plans, both fail but the transaction succeeds 1`] = `
Object {
  "calldataByteLength": 1764,
  "gasUsed": 273152,
}
`;

exports[`Astra Gas Tests Mixing Classic and CL with Universal Router. Batch reverts gas: 2 sub-plans, neither fails 1`] = `
Object {
  "calldataByteLength": 1764,
  "gasUsed": 248874,
}
`;

exports[`Astra Gas Tests Mixing Classic and CL with Universal Router. Batch reverts gas: 2 sub-plans, second sub plan fails 1`] = `
Object {
  "calldataByteLength": 1764,
  "gasUsed": 248874,
}
`;

exports[`Astra Gas Tests Mixing Classic and CL with Universal Router. Batch reverts gas: 2 sub-plans, the first fails 1`] = `
Object {
  "calldataByteLength": 1764,
  "gasUsed": 273152,
}
`;

exports[`Astra Gas Tests Mixing Classic and CL with Universal Router. Interleaving routes gas: CL, then Classic 1`] = `
Object {
  "calldataByteLength": 836,
  "gasUsed": 189624,
}
`;

exports[`Astra Gas Tests Mixing Classic and CL with Universal Router. Interleaving routes gas: Classic, then CL 1`] = `
Object {
  "calldataByteLength": 836,
  "gasUsed": 196828,
}
`;

exports[`Astra Gas Tests Mixing Classic and CL with Universal Router. Split routes gas: ERC20 --> ERC20 split Classic and CL, one hop 1`] = `
Object {
  "calldataByteLength": 996,
  "gasUsed": 179794,
}
`;

exports[`Astra Gas Tests Mixing Classic and CL with Universal Router. Split routes gas: ERC20 --> ERC20 split Classic and CL, one hop, ADDRESS_THIS flag 1`] = `
Object {
  "calldataByteLength": 996,
  "gasUsed": 179569,
}
`;

exports[`Astra Gas Tests Mixing Classic and CL with Universal Router. Split routes gas: ERC20 --> ERC20 split Classic and Classic different routes, different input tokens, each two hop, with batch permit 1`] = `
Object {
  "calldataByteLength": 1540,
  "gasUsed": 305306,
}
`;

exports[`Astra Gas Tests Mixing Classic and CL with Universal Router. Split routes gas: ERC20 --> ERC20 split Classic and Classic different routes, each two hop, with explicit permit 1`] = `
Object {
  "calldataByteLength": 1220,
  "gasUsed": 313366,
}
`;

exports[`Astra Gas Tests Mixing Classic and CL with Universal Router. Split routes gas: ERC20 --> ERC20 split Classic and Classic different routes, each two hop, with explicit permit transfer from batch 1`] = `
Object {
  "calldataByteLength": 1284,
  "gasUsed": 315444,
}
`;

exports[`Astra Gas Tests Mixing Classic and CL with Universal Router. Split routes gas: ERC20 --> ERC20 split Classic and Classic different routes, each two hop, without explicit permit 1`] = `
Object {
  "calldataByteLength": 900,
  "gasUsed": 309818,
}
`;

exports[`Astra Gas Tests Mixing Classic and CL with Universal Router. Split routes gas: ERC20 --> ETH split Classic and CL, exactOut, one hop 1`] = `
Object {
  "calldataByteLength": 964,
  "gasUsed": 198235,
}
`;

exports[`Astra Gas Tests Mixing Classic and CL with Universal Router. Split routes gas: ERC20 --> ETH split Classic and CL, one hop 1`] = `
Object {
  "calldataByteLength": 964,
  "gasUsed": 187631,
}
`;

exports[`Astra Gas Tests Mixing Classic and CL with Universal Router. Split routes gas: ETH --> ERC20 split Classic and CL, one hop 1`] = `
Object {
  "calldataByteLength": 1124,
  "gasUsed": 200312,
}
`;

exports[`Astra Gas Tests Trade on AstraCL with Router02. gas: ERC20 --> ERC20 exactIn, one trade, one hop 1`] = `
Object {
  "calldataByteLength": 420,
  "gasUsed": 104491,
}
`;

exports[`Astra Gas Tests Trade on AstraCL with Router02. gas: ERC20 --> ERC20 exactIn, one trade, three hops 1`] = `
Object {
  "calldataByteLength": 484,
  "gasUsed": 283773,
}
`;

exports[`Astra Gas Tests Trade on AstraCL with Router02. gas: ERC20 --> ERC20 exactIn, one trade, two hops 1`] = `
Object {
  "calldataByteLength": 484,
  "gasUsed": 196595,
}
`;

exports[`Astra Gas Tests Trade on AstraCL with Router02. gas: ERC20 --> ERC20 exactOut, one trade, one hop 1`] = `
Object {
  "calldataByteLength": 420,
  "gasUsed": 114662,
}
`;

exports[`Astra Gas Tests Trade on AstraCL with Router02. gas: ERC20 --> ERC20 exactOut, one trade, three hops 1`] = `
Object {
  "calldataByteLength": 484,
  "gasUsed": 423130,
}
`;

exports[`Astra Gas Tests Trade on AstraCL with Router02. gas: ERC20 --> ERC20 exactOut, one trade, two hops 1`] = `
Object {
  "calldataByteLength": 484,
  "gasUsed": 313743,
}
`;

exports[`Astra Gas Tests Trade on AstraCL with Universal Router. ERC20 --> ERC20 gas: exactIn, one trade, one hop 1`] = `
Object {
  "calldataByteLength": 516,
  "gasUsed": 117144,
}
`;

exports[`Astra Gas Tests Trade on AstraCL with Universal Router. ERC20 --> ERC20 gas: exactIn, one trade, three hops 1`] = `
Object {
  "calldataByteLength": 548,
  "gasUsed": 276366,
}
`;

exports[`Astra Gas Tests Trade on AstraCL with Universal Router. ERC20 --> ERC20 gas: exactIn, one trade, two hops 1`] = `
Object {
  "calldataByteLength": 548,
  "gasUsed": 192426,
}
`;

exports[`Astra Gas Tests Trade on AstraCL with Universal Router. ERC20 --> ERC20 gas: exactOut, one trade, one hop 1`] = `
Object {
  "calldataByteLength": 516,
  "gasUsed": 118771,
}
`;

exports[`Astra Gas Tests Trade on AstraCL with Universal Router. ERC20 --> ERC20 gas: exactOut, one trade, three hops 1`] = `
Object {
  "calldataByteLength": 548,
  "gasUsed": 421314,
}
`;

exports[`Astra Gas Tests Trade on AstraCL with Universal Router. ERC20 --> ERC20 gas: exactOut, one trade, two hops 1`] = `
Object {
  "calldataByteLength": 548,
  "gasUsed": 315013,
}
`;

exports[`Astra Gas Tests Trade on AstraCL with Universal Router. ERC20 --> ETH gas: exactIn swap 1`] = `
Object {
  "calldataByteLength": 644,
  "gasUsed": 133408,
}
`;

exports[`Astra Gas Tests Trade on AstraCL with Universal Router. ERC20 --> ETH gas: exactOut swap 1`] = `
Object {
  "calldataByteLength": 644,
  "gasUsed": 135107,
}
`;

exports[`Astra Gas Tests Trade on AstraCL with Universal Router. ETH --> ERC20 gas: exactIn swap 1`] = `
Object {
  "calldataByteLength": 644,
  "gasUsed": 242391,
}
`;

exports[`Astra Gas Tests Trade on AstraCL with Universal Router. ETH --> ERC20 gas: exactOut swap 1`] = `
Object {
  "calldataByteLength": 772,
  "gasUsed": 129590,
}
`;

exports[`Astra Gas Tests Trade on AstraClassic with Router02. gas: ERC20 --> ERC20 exactIn, one trade, one hop 1`] = `
Object {
  "calldataByteLength": 420,
  "gasUsed": 121407,
}
`;

exports[`Astra Gas Tests Trade on AstraClassic with Router02. gas: ERC20 --> ERC20 exactIn, one trade, two hops 1`] = `
Object {
  "calldataByteLength": 452,
  "gasUsed": 193278,
}
`;

exports[`Astra Gas Tests Trade on AstraClassic with Router02. gas: ERC20 --> ERC20 exactOut, one trade, one hop 1`] = `
Object {
  "calldataByteLength": 420,
  "gasUsed": 122001,
}
`;

exports[`Astra Gas Tests Trade on AstraClassic with Router02. gas: ERC20 --> ETH exactOut ETH, one trade, one hop 1`] = `
Object {
  "calldataByteLength": 580,
  "gasUsed": 122933,
}
`;

exports[`Astra Gas Tests Trade on AstraClassic with Router02. gas: ETH --> ERC20 exactIn, one trade, one hop 1`] = `
Object {
  "calldataByteLength": 420,
  "gasUsed": 124889,
}
`;

exports[`Astra Gas Tests Trade on AstraClassic with Universal Router. ERC20 --> ERC20 gas: exactIn trade, where an output fee is taken 1`] = `
Object {
  "calldataByteLength": 836,
  "gasUsed": 128824,
}
`;

exports[`Astra Gas Tests Trade on AstraClassic with Universal Router. ERC20 --> ERC20 gas: exactIn, one trade, one hop 1`] = `
Object {
  "calldataByteLength": 516,
  "gasUsed": 109042,
}
`;

exports[`Astra Gas Tests Trade on AstraClassic with Universal Router. ERC20 --> ERC20 gas: exactIn, one trade, three hops 1`] = `
Object {
  "calldataByteLength": 580,
  "gasUsed": 246952,
}
`;

exports[`Astra Gas Tests Trade on AstraClassic with Universal Router. ERC20 --> ERC20 gas: exactIn, one trade, three hops, no deadline 1`] = `
Object {
  "calldataByteLength": 548,
  "gasUsed": 246694,
}
`;

exports[`Astra Gas Tests Trade on AstraClassic with Universal Router. ERC20 --> ERC20 gas: exactIn, one trade, two hops 1`] = `
Object {
  "calldataByteLength": 548,
  "gasUsed": 179686,
}
`;

exports[`Astra Gas Tests Trade on AstraClassic with Universal Router. ERC20 --> ERC20 gas: exactIn, one trade, two hops, MSG_SENDER flag 1`] = `
Object {
  "calldataByteLength": 548,
  "gasUsed": 179686,
}
`;

exports[`Astra Gas Tests Trade on AstraClassic with Universal Router. ERC20 --> ERC20 gas: exactOut, one trade, one hop 1`] = `
Object {
  "calldataByteLength": 516,
  "gasUsed": 109016,
}
`;

exports[`Astra Gas Tests Trade on AstraClassic with Universal Router. ERC20 --> ERC20 gas: exactOut, one trade, three hops 1`] = `
Object {
  "calldataByteLength": 580,
  "gasUsed": 252135,
}
`;

exports[`Astra Gas Tests Trade on AstraClassic with Universal Router. ERC20 --> ERC20 gas: exactOut, one trade, two hops 1`] = `
Object {
  "calldataByteLength": 548,
  "gasUsed": 182300,
}
`;

exports[`Astra Gas Tests Trade on AstraClassic with Universal Router. ERC20 --> ETH gas: exactIn, one trade, one hop 1`] = `
Object {
  "calldataByteLength": 644,
  "gasUsed": 125258,
}
`;

exports[`Astra Gas Tests Trade on AstraClassic with Universal Router. ERC20 --> ETH gas: exactOut, one trade, one hop 1`] = `
Object {
  "calldataByteLength": 804,
  "gasUsed": 130417,
}
`;

exports[`Astra Gas Tests Trade on AstraClassic with Universal Router. ERC20 --> ETH gas: exactOut, with ETH fee 1`] = `
Object {
  "calldataByteLength": 964,
  "gasUsed": 138406,
}
`;

exports[`Astra Gas Tests Trade on AstraClassic with Universal Router. ETH --> ERC20 gas: exactIn, one trade, one hop 1`] = `
Object {
  "calldataByteLength": 644,
  "gasUsed": 108953,
}
`;

exports[`Astra Gas Tests Trade on AstraClassic with Universal Router. ETH --> ERC20 gas: exactOut, one trade, one hop 1`] = `
Object {
  "calldataByteLength": 772,
  "gasUsed": 127616,
}
`;
